--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,11 @@
             <artifactId>java-google-speech-api</artifactId>
             <version>8.0.0</version>
         </dependency>
+        
+        <dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.10</version>
+		</dependency>
     </dependencies>
 </project>
